# emerge

./: .gitattributes  .gitignore  .sops.yaml  README.md  flake.nix  tag.txt
.github/scripts/: cleanup.sh
.github/workflows/: build.yml  ci.yml  (+3 more)
bombe/: default.nix  secrets.nix
cmd/: apply.nix  cast.nix  commit.nix  infect.nix
cyber-definitions/: beancount.nix  default.nix  image.nix  machine.nix  maddy.nix  mastodon.nix  nixbot.nix  otp.nix  science.nix  syncthing.nix  trilium.nix  vaultwarden.nix  vikunja.nix  words
def/: apply.nix  cast.nix  commit.nix  cyber.nix  default.nix  infect.nix  lego.nix  machine.nix  upload.nix
fn/: builder.nix  default.nix  file.nix  filesystem.nix  trivial.nix
home-in-details/: default.nix
impl/home/program/neovim/vim-packages/dynamic-syntax/: dynamic-syntax.cabal
infra/: .terraform.lock.hcl  backup.nix  backup.tf  machine.nix  machine.tf  main.nix  main.tf  secrets.nix  secrets.tf  system.nix  system.tf  tfstate.json
opt/: profile.nix  rathole.nix  revive.nix  smartdns.nix  sops-profiles.nix  sops.nix  unfree.nix  workspace.nix
overlays/: fake-fs.nix  override.nix  rstudio.nix  wrapped.nix
pkg/: config.nix  export.nix  external.nix  fake-fs.nix  filters.nix  function.nix  theme.nix  workaround.nix  wrapped.nix
pkg/mkslide/slide-filter/project/: slide-filter.cabal
pkg/mkslide/slide-filter/project/src/: AllowFrameBreaks.hs  FrameTitleContinuation.hs
robotic-evolution/: default.nix
secrets/: decrypted.nix  default.nix  token.nix  tokens.yaml
val/: acro.nix  echo.nix  infe.nix  lego.nix  mod.nix  out.nix
var/: default.nix  ports.nix
world-implementation/: default.nix  hack.nix  registry.nix
(+494 files in other folders)
