cabal-version:       >=1.10
name:                slide-filter
version:             0.1.0.0
build-type:          Simple

executable allowFrameBreaks
  main-is:             AllowFrameBreaks.hs
  build-depends:       base >=4.12
                     , pandoc-types
  hs-source-dirs:      src
  default-language:    Haskell2010

executable frameTitleContinuation
  main-is:             FrameTitleContinuation.hs
  build-depends:       base >=4.12
                     , pandoc-types
					 , string-qq
					 , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
